--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -13,7 +13,23 @@ body {
 
 #heading { width:40em;padding:5px;align:center; margin: 0 auto}
 
+#centerDiv img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.Centerer
+{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+.Centered
+{
+    display: inline-block;
+    vertical-align: middle;
+}
 
 #leftcolumn { width: 800px; 
 				/*border: 1px solid red;*/
@@ -28,13 +44,16 @@ body {
 
 #centerDiv { width: 800px; 
 				border: 1px solid white;
-				float: left; 
-				margin-left: 70px;
-				margin-top:0px;
+			
 				color:white;
 				        /*background-image: url("/Users/Matt_Policane/Documents/webDev/leftDiv.jpg");*/
-				text-align: center; 
+				text-align: left; 
 				background-color: #B7B3BA;
+	margin: auto;
+    width: 60%;
+    padding: 0px;
+    padding-bottom:0px; /* Height of the footer element */
+    padding-left: 0px;
 
 }
 
