--- a/css/basics.css
+++ b/css/basics.css
@@ -28,15 +28,20 @@ body {
 
 #centerDiv { width: 800px; 
 				border: 1px solid white;
-				float: left; 
-				margin-left: 70px;
-				margin-top:0px;
+			
 				color:white;
 				        /*background-image: url("/Users/Matt_Policane/Documents/webDev/leftDiv.jpg");*/
 				text-align: left; 
 				background-color: #B7B3BA;
+	margin: auto;
+    width: 60%;
+    padding: 0px;
+    padding-bottom:0px; /* Height of the footer element */
+    padding-left: 0px;
 
 }
+
+
 
 
 #bottomSection { width: 800px; 
@@ -48,24 +53,29 @@ body {
 
 
 }
-/*#rightcolumn { 	 width: 450px;
-				 border: 1px solid red; 
-				 float: right; 
-				 margin-right: 30px;
-				 background-color: lightblue;
-}*/
+#rightcolumn { 	 width: 800px; 
+			
+				        /*background-image: url("/Users/Matt_Policane/Documents/webDev/leftDiv.jpg");*/
+				text-align: left; 
+	margin: auto;
+    width: 60%;
+    padding: 0px;
+    padding-bottom:0px; /* Height of the footer element */
+    padding-left: 0px;
+}
 #footing { text-align: center; width:40em; align: center; padding:5px;position: fixed;bottom: 0; /*border: 1px solid red*/; margin-left: 150px;}
 .link-button-wrapper {
     width: 200px;
     height: 40px;
     box-shadow: inset 0px 1px 0px 0px #ffffff;
     border-radius: 4px;
-    background-color:  #097BC0;;
+    background-color:  #B7B3BA;;
     box-shadow: 0px 2px 4px gray;
     display: block;
     border:1px solid  #f7f8f8;;
-    margin-left: 300px;
-    margin-top: 100px;
+    /*margin-left: 300px;
+    margin-top: 100px;*/
+	margin: auto;
 }
 .link-button-wrapper > a {
     display: inline-table;
@@ -74,7 +84,7 @@ body {
     height: 100%;
     width:100%;
 }
-.link-button-wrapper > a > h1 {
+.link-button-wrapper > a > h6 {
     /*margin: 0 auto;*/
     display: table-cell;
     vertical-align: middle;
