--- a/css/basics.css
+++ b/css/basics.css
@@ -6,7 +6,7 @@
 /*# sourceMappingURL=bootstrap.min.css.map */
 
 body {
-	background-color: #D2D2D2;
+	background-color: black;
 	font-family:candara,arial;font-size: 12pt;color:#FFFFFF;
     background-image: url("bg8.png");
     	background-repeat: no-repeat;
@@ -67,7 +67,15 @@ body {
 
 }
 
-
+#moveOn {
+text-align: left;
+	margin: auto;
+    width: 50%;
+    padding: 0px;
+    padding-bottom:0px; /* Height of the footer element */
+    padding-left: 100px;
+   
+}
 
 
 #bottomSection { width: 800px; 
@@ -84,10 +92,11 @@ body {
 				        /*background-image: url("/Users/Matt_Policane/Documents/webDev/leftDiv.jpg");*/
 				text-align: left; 
 	margin: auto;
-    width: 60%;
+    width: 0%;
     padding: 0px;
     padding-bottom:0px; /* Height of the footer element */
     padding-left: 0px;
+    padding-right: 700px;
 }
 .footing {  position: absolute;
   right: 0;
@@ -101,12 +110,12 @@ body {
 .link-button-wrapper {
     width: 200px;
     height: 40px;
-    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    /*box-shadow: inset 0px 1px 0px 0px #ffffff;
     border-radius: 4px;
-    background-color:  #B7B3BA;;
+    background-color: rgba(200,200,200,0.7);
     box-shadow: 0px 2px 4px gray;
     display: block;
-    border:1px solid  #f7f8f8;;
+    border:1px solid  #f7f8f8;; */
     /*margin-left: 300px;
     margin-top: 100px;*/
 	margin: auto;
