--- a/css/custom.css
+++ b/css/custom.css
@@ -28,7 +28,7 @@ body {
 	margin:0;
 	padding:0;
 	height:100%;
-    background-image: url("space.jpg");
+    background-image: url("bgnew.jpg");
 	background-color: black;
 	background-repeat: no-repeat;
 	background-color: black;
