--- a/css/basics.css
+++ b/css/basics.css
@@ -49,6 +49,13 @@ body {
 				text-align: center; 
 
 }
+h3{
+font-weight: bold;
+}
+
+h4{
+font-weight: bold;
+}
 
 #centerDiv { width: 800px; 
 				border: 1px solid white;
